syntax = "proto3";

package task_system.scheduler.v1;


import "google/protobuf/any.proto";
import "google/api/annotations.proto";


option go_package = ".;v1";

service Account{
  rpc Ping (Empty) returns (Result) {
    option (google.api.http) = {
      get: "/v1/ping"
    };
  }
  rpc GetByID(GetByIDReq)returns(GetByIDResp){
    option (google.api.http) = {
      get:"/v1/user/{id}"
    };
  }
}

message Result{
  int64 code = 1;
  string message = 2;
  google.protobuf.Any data = 3;
}

message Empty{

}

message GetByIDReq {
  uint64 id = 1;
}
message GetByIDResp {
    UserModel user = 1;
}

message UserModel{
  uint64 id = 1;
  string name = 2;
}